# zenith-analyser

./: .codecov.yml  .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  check_setup_cfg.py  docker-compose.yml  init_github.py  pyproject.toml  requirements-docs.txt  requirements-test.txt  requirements.txt  setup.py  test_local.py
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  codeql-analysis.yml  format.yml  release.yml  stale.yml  tests.yml
benchmarks/: README.md  benchmark_memory.py  benchmark_performance.py
docs/source/: conf.py  index.rst  metrics.rst  visualizer.rst
examples/: __init__.py  advanced_analysis.py  basic_usage.py  custom_workflow.py  sample_code.zen
scripts/: code_analysis.py  release.sh  setup_environment.sh
src/zenith_analyser/: __init__.py  analysers.py  cli.py  constants.py  exceptions.py  lexer.py  metrics.py  parser.py  unparser.py  utils.py  validator.py  visuals.py
tests/: __init__.py  conftest.py  test_analysers.py  test_integration.py  test_lexer.py  test_parser.py  test_unparser.py  test_validator.py
tests/fixtures/: sample_code.txt
