[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zenith-analyser"
version = "1.0.0"  # Aligné avec ta release PyPI
description = "A library for analyzing structured temporal laws"
readme = "README.md"
authors = [{ name = "Francois TUMUSAVYEYESU", email = "frasasudev@gmail.com" }]
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "Development Status :: 5 - Production/Stable",
]
keywords = ["temporal", "chronology", "dsl", "parser", "analysis", "simulation", "zenith"]
dependencies = []  # Ajoute des deps runtime si besoin plus tard

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",  # Pour le type check dans lint
]

[project.scripts]
zenith = "zenith_analyser.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.black]
line-length = 88
target-version = ['py38']